--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,20 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
+  <style>
+      *{
+          margin: 0px;
+          padding: 0px;
+      }
+  </style>
   <body>
-    <noscript>
+   <!-- <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
+    </noscript>-->
+    <div id="app">
+
+    </div>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
